# edd_22_08_2024

./: README.md
env/: pyproject.toml
env/teste_edd/: dbt_project.yml
