[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["Leandro Frazão <leandro.frazao.data@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.5"
dbt-postgres = "^1.8.2"
sqlfluff = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
